--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
-    "express": "^4.17.21"
+    "express": "^4.17.21",
+    "express-session": "^1.18.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/node": "^20.12.7",
+    "install": "^0.13.0",
     "nodemon": "^3.1.0",
+    "npm": "^10.8.1",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
