--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsc --build",
-    "start": "node ./dist/index.js",
-    "dev": "nodemon --exec ts-node ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/server.js",
+    "dev": "nodemon --exec ts-node ./src/server.ts",
+    "test": "jest --watchAll --verbose --maxWorkers=1"
   },
   "keywords": [],
   "author": "",
@@ -15,18 +15,25 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "@types/cors": "^2.8.17",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.21",
     "express-session": "^1.18.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
+    "@types/supertest": "^6.0.2",
     "install": "^0.13.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "npm": "^10.8.1",
     "prisma": "^5.13.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
