--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.17.0",
     "@types/cors": "^2.8.17",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.21",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -26,11 +28,11 @@
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
-    "install": "^0.13.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "npm": "^10.8.1",
     "prisma": "^5.13.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.2",
