--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc --build",
-    "start": "node ./dist/server.js",
-    "dev": "nodemon --exec ts-node ./src/server.ts",
+    "start": "tsx ./dist/server.js",
+    "dev": "nodemon --exec tsx ./src/server.ts",
     "test": "jest --watchAll --verbose --maxWorkers=1"
   },
   "keywords": [],
@@ -36,8 +37,9 @@
     "nodemon": "^3.1.0",
     "prisma": "^5.17.0",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.0",
     "typescript": "^5.4.5"
   }
 }
