--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ DATABASE_PORT="5555"
 DATABASE_NAME="planner"
 DATABASE_HOST="localhost"
 DATABASE_SCHEMA="public"
-DATABASE_URL="${DATABASE_TYPE}://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}"
+DATABASE_URL="${DATABASE_TYPE}://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=${DATABASE_SCHEMA}"
